--- a/README
+++ b/README
@@ -1,13 +1,15 @@
-Copyright @2011
-Created By: Hrishikesh Paranjape
-Email: hrishikeshp19@gmail.com
-Created On: 09/17/2011
-
+/*
+    Copyright(c) 2011 Hrishikesh Paranjape
+    hrishikeshp19@gmail.com
+    http://www.github.com/hrishikeshparanjape
+*/
 Fun project Slot Machine using Sencha Touch
 
-Files included:
-README
-index.html
-Sencha/*
-js/*
-css/*
+Instructions:
+Either:
+Download the repository and open index.html in your web browser (Chrome, Safari, IE)
+
+Or:
+Put the Repository on a application server(WAMP/MAMP/XAMPP), and open the server location in iPhone/Android/Windows Phone 7
+
+Enjoy playing Slot Machine.
